Style: improving footer style; main style; button style; title style and text style

--- a/ui.frontend/public/index.html
+++ b/ui.frontend/public/index.html
@@ -25,6 +25,17 @@
   <link href="/js/app.js" rel="preload" as="script">
   <link href="/js/app.js" rel="preload" as="script">
   <link href="/js/chunk-vendors.js" rel="preload" as="script">
+
+  <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
+    *{
+      box-sizing: border-box;
+    }
+  </style>
+
 </head>
 
 <body class="page basicpage">
